# backend/routes/index.js
@@ -6,6 +6,6 @@ const router = express.Router();
 router.use('/contacts', require('./contacts'))
 router.use('/professional', require('./professional'))
 
-router.use('/api-docs', require('./swagger'));
+router.use('/', require('./swagger'));
 
 module.exports = router;
